FlightPath 5.x Changelog
========================

2019-06-14
  Patched a security bug whereby a user could theoretically try to view a system file, using a PHP Local File Include vulnerability.
  Special thanks to m.althibyani@gmail.com for finding and reporting!


2019-06-06
  Created a new core module: SMTP, as well as a helper function, fp_mail().  Now if you have the SMTP module
  enabled and configured, all mail is automatically routed through your SMTP server, instead of whatever
  the default setting is for PHP's mail() command.
  
  Added PHPMailer to the /inc/ directory (for the SMTP module).
  
  Moved some settings from the System Settings form and into the School settings form.
  
  Created a custom PHP error handler, so that we can display (and log if necessary, email, etc) PHP 
  warnings and errors.

  Added /icons/ folders and silk icons for admin/config menu entires for the core modules.
  
  Adjusted CSS in default themes to make new icons look nicer.


2019-04-30
  Fixed bug in _DegreePlan.php which caused tracks to not load correctly while viewing in draft mode (Thanks
  to Logan Buth from Morningside College).


2019-04-03
  Mitigated some possible XSS weaknesses in index.php (by using more secure headers and cookies), and in 
  render.inc.  When creating forms, the current path was not being santized sufficiently, which has now been
  corrected.


2019-03-20
  Added new system setting, letting you disable logins for all but admin.  Very helpful for
  maintenance tasks.
  

2019-03-19
  Fixed bug in _FlightPath, causing errors.
  
  Changed way I was forcing something to be numeric, to silence a warning in PHP 7.2
  
  Fixed code which causes a bug in MySQL 8+
    

2019-03-15
  Added a new option to System Settings: enable or disable display level-3 selection on what if selection screen.  If disabled,
  this has more of a feel for FlightPath 4, and might help schools which do not allow dynamic degrees, or who have so many level 3